1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtoolsgui.h (MessageProbeWidget): New protocol and class object.

	* MessageProbeWidget.[hm] (-setProbe:) Make argument an object
	conforming to the Probe protocol instead of being statically
	typed.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LIBRARIES, libsimtoolsgui_a_SOURCES): Remove.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libsimtoolsgui_la_SOURCES,
	libsimtoolsgui_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* simtoolsgui.h: Update documentation tags.
	Prefix global references with extern.

	* global.h: Move buildWindowGeometryRecordName declaration here
	(was in simtoolsgui.h).

	* GUIComposite.m, GUISwarm.m: Include global.h.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* simtoolsgui.h: Include activity.h.

1998-05-22  Alex Lancaster  <alex@santafe.edu>

	* simtoolsgui.h (ActionCache, probeDisplayManager,
	initSimtoolsGUI): Added doc tags (//G) to global variables and
	symbols.
	(SET_WINDOW_GEOMETRY_RECORD_NAME,CREATE_PROBE_DISPLAY,
	CREATE_COMPLETE_PROBE_DISPLAY, CREATE_ARCHIVED_PROBE_DISPLAY,
	CREATE_ARCHIVED_COMPLETE_PROBE_DISPLAY): Added doc tags (//#) for
	macros.

1998-05-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeDisplayManager.m: Include simtoolsgui.h.
	([ProbeDisplayManager
	-_createDefaultProbeDisplayFor_:setWindowGeometryRecordName:],
	[ProbeDisplayManager
	-_createProbeDisplayFor_:setWindowGeometryRecordName:],
	[ProbeDisplayManager
	-createArchivedProbeDisplayFor:variableName:],
	[ProbeDisplayManager -createProbeDisplayFor:],
	[ProbeDisplayManager -createDefaultProbeDisplayFor:],
	[ProbeDisplayManager