@@ -1,3 +1,12 @@
+1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile.am (SRC, simtoolsgui_HEADERS): Remove mention of
+	ActiveGraph.
+
+	* simtoolsgui.h (ActiveGraph): Remove.
+
+	* ActiveGraph.[hm]: Remove.
+
 1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* simtoolsgui.h (MessageProbeWidget): New protocol and class object.
